--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
    <!-- <name>AsteroidsServiceLoader</name>-->
-    <name>TestLab</name>
+    <name>JavaLab+TestLab</name>
     <repositories>
     </repositories>
 
